syntax = "proto3";
package node;

import "gogoproto/gogo.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.goproto_enum_prefix_all) = false;

message RequestHeader {
    uint64 ID = 1; 
    int32 data_type = 2;
    int64 timestamp = 3;
}

message InternalRaftRequest {
    RequestHeader header = 1;
    bytes data = 2;
}

message BatchInternalRaftRequest {
    int32 req_num = 1 ;
    repeated InternalRaftRequest reqs = 2;
}

enum SchemaChangeType {
    SchemaChangeAddHsetIndex = 0;
    SchemaChangeUpdateHsetIndex = 1;
    SchemaChangeDeleteHsetIndex = 2;
}

message SchemaChange {
    SchemaChangeType Type = 1;
    string Table = 2;
    bytes SchemaData = 3;
}
